mark as reviewed; changed image zoom shortcut; fixed bug in panel collapse; new case insensitive field for names in taxon index

--- a/app/assets/stylesheets/observations/show2.scss
+++ b/app/assets/stylesheets/observations/show2.scss
@@ -866,6 +866,13 @@ h3, h4 {
   .comment_id {
     margin-left: 60px;
   }
+  .review {
+    float: right;
+    line-height: 34px;
+    input {
+      margin-right: 5px;
+    }
+  }
 }
 
 .UsersPopover {
@@ -900,7 +907,7 @@ h3, h4 {
 }
 
 .QualityMetrics {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding-right: 25px;
   .grade {
     margin: 15px 0px 25px;
